# DeskMonitor

./: .gitignore  AGENTS.md  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.defaults
components/app/: CMakeLists.txt  idf_component.yml
components/app/include/app/: app_config.h  app_config_json.h  app_diagnostics.h  app_display_data.h  app_gzip.h  app_httpd.h  app_ota.h  app_storage.h  app_time.h  app_wifi.h
components/app/src/: app_config.c  app_config_json.c  app_config_validate.c  app_diagnostics.c  app_display_data.c  app_gzip.c  app_httpd.c  app_ota.c  app_storage.c  app_time.c  app_wifi.c
components/bsp/: CMakeLists.txt
components/bsp/include/bsp/: bsp_i2c.h  bsp_io.h
components/bsp/src/: bsp_i2c.c
components/sensors/: CMakeLists.txt
components/sensors/include/sensors/: aht20.h  ens160.h
components/sensors/src/: aht20.c  ens160.c
components/storage/: CMakeLists.txt
components/storage/src/: tf_album.c
components/ui/: CMakeLists.txt  idf_component.yml
components/ui/include/ui/: ui_button.h  ui_carousel.h  ui_display.h  ui_display_state.h  ui_font.h  ui_history_points.h  ui_pages.h
components/ui/src/: ui_button.c  ui_carousel.c  ui_display.c  ui_display_state.c  ui_font_custom.c  ui_history_points.c  ui_pages.c
data/: controller.html
docs/: design.md  peripheral.md  usage.md
scripts/: controller.html  minify_web.py
src/: CMakeLists.txt  idf_component.yml  main.c
src/app/: app_config.c  app_config.h  app_config_json.c  app_config_json.h  app_config_validate.c  app_diagnostics.c  app_httpd.c  app_httpd.h  app_ota.c  app_ota.h  app_storage.c  app_storage.h  app_wifi.c  app_wifi.h
src/bsp/: bsp_i2c.c  bsp_i2c.h  bsp_io.h
src/sensors/: aht20.c  ens160.c  ens160.h  sensor_i2c.c  sensor_i2c.h  tsl2591.c  tsl2591.h
src/storage/: tf_album.c  tf_album.h
src/ui/: ui_button.c  ui_button.h  ui_display.c  ui_display.h  ui_pages.c  ui_pages.h
test/: config_validation_test.c  display_config_state_test.c  history_points_test.c  run_config_validation.sh  run_display_config_state.sh  run_history_points.sh  run_ui_carousel.sh  run_web_minify_test.sh  ui_carousel_test.c  verify_constraints.sh  verify_ui_layout.sh
